# nmai

./: .gitignore  first.ipynb  interaction.py  pyproject.toml  type.txt
